# Load-Frame-Controller

./: .gitignore  README.md  application.py  menu.ui  meson.build  tiniusolsen.py  window.glade
data/: meson.build  tech.tomegan.load_frame_controller.desktop
docs/: Tinius Olsen 1000 Series Serial Interface.txt  Tinius Olsen H5K Serial Interface.txt  Tinius Olsen Serial Interface.txt
src/: application.py  load_frame_controller.gresource.xml  load_frame_controller.in  loadframe.py  meson.build  tiniusolsen.py
src/ui/: menu.glade  window.glade
