configure_file(
  input: 'tech.tomegan.load_frame_controller.desktop',
  output: 'tech.tomegan.load_frame_controller.desktop',
  copy: true,
  install: true,
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data('tech.tomegan.load_frame_controller.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'))
